@@ -23,7 +23,7 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.io.PrintStream;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.HashMap;
 import java.util.List;
@@ -34,6 +34,7 @@ import java.util.function.Predicate;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
+import org.apache.accumulo.core.data.ResourceGroupId;
 import org.apache.commons.lang3.StringUtils;
 import org.yaml.snakeyaml.Yaml;
 
@@ -43,8 +44,14 @@ import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 
 public class ClusterConfigParser {
 
-  private static final Pattern GROUP_NAME_PATTERN =
-      Pattern.compile("^[a-zA-Z_]{1,}[a-zA-Z0-9_]{0,}$");
+  private static final Pattern GROUP_NAME_PATTERN = Pattern.compile("^[a-zA-Z]+(_?[a-zA-Z0-9])*$");
+
+  public static void validateGroupName(ResourceGroupId rgid) {
+    if (!GROUP_NAME_PATTERN.matcher(rgid.canonical()).matches()) {
+      throw new IllegalArgumentException(
+          "Group name: " + rgid.canonical() + " contains invalid characters");
+    }
+  }
 
   public static void validateGroupNames(List<String> names) {
     for (String name : names) {
@@ -78,9 +85,9 @@ public class ClusterConfigParser {
           || VALID_CONFIG_PREFIXES.stream().anyMatch(section::startsWith);
 
   @SuppressFBWarnings(value = "PATH_TRAVERSAL_IN", justification = "paths not set by user input")
-  public static Map<String,String> parseConfiguration(String configFile) throws IOException {
+  public static Map<String,String> parseConfiguration(Path configFile) throws IOException {
     Map<String,String> results = new HashMap<>();
-    try (InputStream fis = Files.newInputStream(Paths.get(configFile), StandardOpenOption.READ)) {
+    try (InputStream fis = Files.newInputStream(configFile, StandardOpenOption.READ)) {
       Yaml y = new Yaml();
       Map<String,Object> config = y.load(fis);
       config.forEach((k, v) -> flatten("", k, v, results));
@@ -226,12 +233,12 @@ public class ClusterConfigParser {
     try {
       if (args.length == 2) {
         // Write to a file instead of System.out if provided as an argument
-        try (OutputStream os = Files.newOutputStream(Paths.get(args[1]), StandardOpenOption.CREATE);
+        try (OutputStream os = Files.newOutputStream(Path.of(args[1]));
             PrintStream out = new PrintStream(os)) {
-          outputShellVariables(parseConfiguration(args[0]), new PrintStream(out));
+          outputShellVariables(parseConfiguration(Path.of(args[0])), out);
         }
       } else {
-        outputShellVariables(parseConfiguration(args[0]), System.out);
+        outputShellVariables(parseConfiguration(Path.of(args[0])), System.out);
       }
     } catch (Exception e) {
       System.err.println("Processing error: " + e.getMessage());
